; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/omap/extr_rfbi.c_rfbi_transfer_area.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/omap/extr_rfbi.c_rfbi_transfer_area.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { void (i8*)*, i32, i8* }

@rfbi = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@RFBI_PIXEL_CNT = common dso_local global i32 0, align 4
@RFBI_CONTROL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, void (i8*)*, i8*)* @rfbi_transfer_area to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rfbi_transfer_area(i32 %0, i32 %1, void (i8*)* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca void (i8*)*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store void (i8*)* %2, void (i8*)** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load void (i8*)*, void (i8*)** %7, align 8
  %11 = icmp eq void (i8*)* %10, null
  %12 = zext i1 %11 to i32
  %13 = call i32 @BUG_ON(i32 %12)
  %14 = call i32 @rfbi_enable_clocks(i32 1)
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @omap_dispc_set_lcd_size(i32 %15, i32 %16)
  %18 = load void (i8*)*, void (i8*)** %7, align 8
  store void (i8*)* %18, void (i8*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rfbi, i32 0, i32 0), align 8
  %19 = load i8*, i8** %8, align 8
  store i8* %19, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rfbi, i32 0, i32 2), align 8
  %20 = load i32, i32* @RFBI_PIXEL_CNT, align 4
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* %6, align 4
  %23 = mul nsw i32 %21, %22
  %24 = call i32 @rfbi_write_reg(i32 %20, i32 %23)
  %25 = load i32, i32* @RFBI_CONTROL, align 4
  %26 = call i32 @rfbi_read_reg(i32 %25)
  store i32 %26, i32* %9, align 4
  %27 = load i32, i32* %9, align 4
  %28 = or i32 %27, 1
  store i32 %28, i32* %9, align 4
  %29 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rfbi, i32 0, i32 1), align 8
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %34, label %31

31:                                               ; preds = %4
  %32 = load i32, i32* %9, align 4
  %33 = or i32 %32, 16
  store i32 %33, i32* %9, align 4
  br label %34

34:                                               ; preds = %31, %4
  %35 = load i32, i32* @RFBI_CONTROL, align 4
  %36 = load i32, i32* %9, align 4
  %37 = call i32 @rfbi_write_reg(i32 %35, i32 %36)
  %38 = call i32 @omap_dispc_enable_lcd_out(i32 1)
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @rfbi_enable_clocks(i32) #1

declare dso_local i32 @omap_dispc_set_lcd_size(i32, i32) #1

declare dso_local i32 @rfbi_write_reg(i32, i32) #1

declare dso_local i32 @rfbi_read_reg(i32) #1

declare dso_local i32 @omap_dispc_enable_lcd_out(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
